fix: navigation li spacing

--- a/src/sass/pages/_product-partner.scss
+++ b/src/sass/pages/_product-partner.scss
@@ -101,20 +101,30 @@ body.product-partner {
       font-size: 1rem;
       line-height: 22px;
       margin: 30px auto;
-      text-align: left;
       padding: 0;
-      width: 790px;
       border: none;
       width: 100%;
       padding: 0 22px;
+      text-align: left;
+      display: flex;
+      justify-content: center;
+
       @media screen and (min-width: $break-lg) {
         display: none;
       }
 
       .link-list {
-        margin: 0 0 30px 0;
+        margin: 0 0 30px 12.5%;
+        max-width: 640px;
+
         @media screen and (max-width: $break) {
-          margin: 0 0 72px 0;
+          margin-bottom: 72px;
+          max-width: unset;
+        }
+
+        @media screen and (max-width: $break-xs) {
+          max-width: unset;
+          margin-left: 0;
         }
 
         li {
